--- a/index.html
+++ b/index.html
@@ -13,65 +13,22 @@
     </div>
 
     <div>
-        <h2 data-testid="dayOfTheWeek" class="date"></h2>
+        <h2 data-testid="currentDayOfTheWeek"></h2>
         <h2 data-testid="currentUTCTime" class="time"></h2>
     </div>
 
     <div>
-        <h3 data-testid="myTrack" id="track">myTrack: Frontend</h3>
+        <h3 data-testid="myTrack">Track: Frontend</h3>
     </div>
 
     <div>
-        <a href="https://github.com/yourusername/your-repo" data-testid="githubURL">My GitHub Repository</a>
+        <a href="https://github.com/ChukwuemekaNworie/Task1project" data-testid="githubURL">My GitHub Repository</a>
     </div>
 
-
-
-    
+ 
 
     <script src="app.js"></script>
 </body>
 </html>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <h1  data-testid="JayfreshDvocal">Jayfresh D coal</h1>
-
-        <img data-testid="JayfreshDvocal" src="img/jayfresh.jpeg" alt="Jayfresh D vocal">
-    </div>
-
-    <div>
-        <h2 data-testid="" id="day"></h2>
-        <h2 data-testid="" id="tim"></h2>
-    </div>
-
-    <div>
-        <h3 data-testid="frontend">Front-End Developer</h3>
-    </div>
-
-
-    <script src="app.js"></script>
-</body>
-</html> -->
